tests/fixtures/errors/typecheck-only/src/Main2.elm
module Main2 exposing (forMainTypo, main)

import Html


main =
    Html.text "Main2"


forMain3 =
    "forMain3"
